# LabelLex

./: .gitignore  CLAUDE.md
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: annotations.py  attributes.py  categories.py  documents.py  labels.py  projects.py  publish.py  relations.py  search.py  structure.py  suggestions.py
backend/app/services/: attributes.py  auto_label.py  clause_discovery.py  clause_instrument_discovery.py  clause_instrument_discovery_claude.py  clause_segmenter.py  document_activity.py  label_counts.py  ollama.py  pdf_parser.py  storage.py  structure_detector.py  subparagraph_segmenter.py
backend/app/services/strategies/: __init__.py  base.py  registry.py  router.py  zero_shot.py
backend/scripts/: parse_pdf.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: AnnotationListPanel.tsx  PdfPage.tsx
frontend/src/pages/: DocumentViewer.tsx  LabelsPage.tsx  ProjectPage.tsx  ProjectSettingsPage.tsx  ProjectShell.tsx  ProjectsListPage.tsx
frontend/src/utils/: spans.ts
